# pdfvisualparser

./: LICENSE  README.md  pyproject.toml
src/pdfvisualparser/app/ui/common/: interfaces.py  mainapp.py
src/pdfvisualparser/app/ui/views/: mainwindowmodel.py
src/pdfvisualparser/app/ui/wx/: mainwindow.py  wxapp.py
