[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfvisualparser"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "pillow==10.3.0",
    "wxPython==4.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdfvisualparser*"]
exclude = ["pdfvisualparser.tests*"]
